fix: поправить комменатрии ревьювера

--- a/src/blocks/footer/__copyright/footer__copyright.css
+++ b/src/blocks/footer/__copyright/footer__copyright.css
@@ -7,7 +7,7 @@
 	line-height: 22px;
 	color: #545454;
 	margin-top: 67px;
-	margin-bottom: 60px;
+	padding-bottom: 60px;
 }
 
 @media screen and (max-width: 1000px) {
